# hdlco

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  conanfile.txt  readme.md
cmake/: conan.cmake
example/: CMakeLists.txt  example.cpp  example_io.h
example/include/: example_io.h
hdlc/: CMakeLists.txt
hdlc/include/hdlc/: blocking_connection_simple.h  frame.h  frame_factory.h  frame_pipe.h  frame_reciever.h  hdlc.h  io.h  options.h  random_frame_factory.h  serializer.h  session.h  session_master.h  snrm_session_client.h  snrm_session_master.h  stream_helper.h  types.h
hdlc/src/: random_frame_factory.cpp  serializer.cpp  stream_helper.cpp
profile/: clang
test/: CMakeLists.txt  hdlc_test.cpp
test/include/: loopback_io.h
